--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Hello</h1>
-        <p>test</p>
+        <h1>The world</h1>
+        <p>Wellcome to this tiny world</p>
 
         <p class="view"><a href="https://github.com/donfoxue/Hello">View the Project on GitHub <small>donfoxue/Hello</small></a></p>
 
